Adding 55% completed code. Lockign mechanism still remains